--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 message(STATUS "===============================")
-MESSAGE(STATUS "current operation system is ${CMAKE_SYSTEM}")
+message(STATUS "current operation system is ${CMAKE_SYSTEM}")
 message(STATUS "current operation system name is ${CMAKE_SYSTEM_NAME}")
 
 #根据不同平台给CURRENT_SYSTEM命名
@@ -45,47 +45,51 @@ pkg_check_modules(LIBHEIF REQUIRED libheif)
 include_directories(${LIBHEIF_INCLUDE_DIRS})
 link_directories(${LIBHEIF_LIBRARY_DIRS})
 
+# 输出路径设定
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/install/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/install/lib)  # 确保可执行文件也输出到此目录
 
+# 定义源文件清单
+set(SRC_FILES
+        ../include/library.h                                library.cpp
+        ../jni/cn_netdiscovery_monica_opencv_ImageProcess.h ../jni/cn_netdiscovery_monica_opencv_ImageProcess.cpp
+        ../include/colorcorrection/ColorCorrection.h        colorcorrection/ColorCorrection.cpp
+        ../include/matchTemplate/MatchTemplate.h            matchTemplate/MatchTemplate.cpp
+        ../include/utils/JNIUtils.h                         utils/JNIUtils.cpp
+        ../include/utils/Utils.h                            utils/Utils.cpp
+        )
+
+# 生成共享库名
 if (${CURRENT_SYSTEM} MATCHES "MacOS" AND ${CMAKE_HOST_SYSTEM_PROCESSOR} MATCHES "x86_64")
+    set(LIB_NAME MonicaImageProcess)
+elseif (${CURRENT_SYSTEM} MATCHES "MacOS" AND ${CMAKE_HOST_SYSTEM_PROCESSOR} MATCHES "arm64")
+    set(LIB_NAME MonicaImageProcess_aarch64)
+elseif (${CURRENT_SYSTEM} MATCHES "Linux")
+    set(LIB_NAME MonicaImageProcess)
+endif()
 
-    add_library(${PROJECT_NAME} SHARED
-            ../include/library.h                                library.cpp
-            ../jni/cn_netdiscovery_monica_opencv_ImageProcess.h ../jni/cn_netdiscovery_monica_opencv_ImageProcess.cpp
-            ../include/colorcorrection/ColorCorrection.h        colorcorrection/ColorCorrection.cpp
-            ../include/matchTemplate/MatchTemplate.h            matchTemplate/MatchTemplate.cpp
-            ../include/utils/JNIUtils.h                         utils/JNIUtils.cpp
-            ../include/utils/Utils.h                            utils/Utils.cpp
+add_library(${LIB_NAME} SHARED ${SRC_FILES})
+
+# 设置目标属性 - macOS的RPATH处理
+if(${CURRENT_SYSTEM} MATCHES "MacOS")
+    set_target_properties(${LIB_NAME} PROPERTIES
+            BUILD_WITH_INSTALL_RPATH TRUE
+            INSTALL_RPATH "@loader_path"
+            MACOSX_RPATH ON
             )
+endif()
 
-    target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
-    target_link_libraries(${PROJECT_NAME} ${LIBRAW_LIBRARIES})
-    target_link_libraries(${PROJECT_NAME} ${LIBHEIF_LIBRARIES})
-elseif(${CURRENT_SYSTEM} MATCHES "MacOS" AND ${CMAKE_HOST_SYSTEM_PROCESSOR} MATCHES "arm64")
+# 链接库
+target_link_libraries(${LIB_NAME}
+        ${OpenCV_LIBS}
+        ${LIBRAW_LIBRARIES}
+        ${LIBHEIF_LIBRARIES}
+)
 
-    add_library(MonicaImageProcess_aarch64 SHARED
-            ../include/library.h                                library.cpp
-            ../jni/cn_netdiscovery_monica_opencv_ImageProcess.h ../jni/cn_netdiscovery_monica_opencv_ImageProcess.cpp
-            ../include/colorcorrection/ColorCorrection.h        colorcorrection/ColorCorrection.cpp
-            ../include/matchTemplate/MatchTemplate.h            matchTemplate/MatchTemplate.cpp
-            ../include/utils/JNIUtils.h                         utils/JNIUtils.cpp
-            ../include/utils/Utils.h                            utils/Utils.cpp
+# === 复制依赖的 dylib 到输出目录（仅 macOS） ===
+if (CURRENT_SYSTEM STREQUAL "MacOS")
+    add_custom_command(TARGET ${LIB_NAME} POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E echo "Fixing dylib dependencies..."
+            COMMAND bash ${CMAKE_SOURCE_DIR}/fix_dylib_dependencies.sh ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/lib${LIB_NAME}.dylib
             )
-
-    target_link_libraries(MonicaImageProcess_aarch64 ${OpenCV_LIBS})
-    target_link_libraries(MonicaImageProcess_aarch64 ${LIBRAW_LIBRARIES})
-    target_link_libraries(MonicaImageProcess_aarch64 ${LIBHEIF_LIBRARIES})
-elseif(${CURRENT_SYSTEM} MATCHES "Linux")
-
-    add_library(${PROJECT_NAME} SHARED
-            ../include/library.h                                library.cpp
-            ../jni/cn_netdiscovery_monica_opencv_ImageProcess.h ../jni/cn_netdiscovery_monica_opencv_ImageProcess.cpp
-            ../include/colorcorrection/ColorCorrection.h        colorcorrection/ColorCorrection.cpp
-            ../include/matchTemplate/MatchTemplate.h            matchTemplate/MatchTemplate.cpp
-            ../include/utils/JNIUtils.h                         utils/JNIUtils.cpp
-            ../include/utils/Utils.h                            utils/Utils.cpp
-            )
-
-    target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
-    target_link_libraries(${PROJECT_NAME} ${LIBRAW_LIBRARIES})
-    target_link_libraries(${PROJECT_NAME} ${LIBHEIF_LIBRARIES})
-endif ()
+endif()
